# tt-sparse

./: LICENSE  README.md  pyproject.toml
examples/: datasets.py  quickstart.py
src/tt_sparse/: __init__.py  encoder.py  model.py  qmc.py  rules.py
tests/: test_equivalence.py  test_pruning.py  test_qmc.py  test_rules.py
