[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tt-sparse"
version = "0.1.0"
description = "Learning sparse rule models with differentiable truth tables"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Hans Farrell Soegeng" }]
dependencies = ["torch>=2.0", "numpy>=1.24", "pandas>=2.0", "scikit-learn>=1.3"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
